# audit-risk-analytics

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
dashboard/: streamlit_app.py
notebooks/: 01_data_exploration.ipynb  02_anomaly_detection.ipynb  03_risk_scoring.ipynb
reports/: audit_findings_summary.md
src/: __init__.py  anomaly_model.py  config.py  feature_engineering.py  pipeline.py  report_generator.py  risk_scorer.py
tests/: test_anomaly_model.py  test_pipeline.py  test_risk_scorer.py
