[project]
name = "audit-risk-analytics"
version = "0.1.0"
description = "End-to-end financial transaction analytics for fraud detection and audit risk assessment"
requires-python = ">=3.12"

dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "duckdb>=0.9",
    "streamlit>=1.30",
    "plotly>=5.18",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "pyarrow>=14.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends._legacy:_Backend"
